Next release:

0004258: Create Fabric project in Subversion